--- a/web/css/postlog.css
+++ b/web/css/postlog.css
@@ -1,11 +1,101 @@
 body {
     display: flex;
-    justify-content: center ;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     background: rgb(60, 60, 60);
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+.window {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    width: 80%;
+    max-width: 625px;
+    background: rgb(60, 60, 60);
+    background-size: auto;
+    background-position: center;
+    margin: 0;
+    box-shadow: 0px 4px 83px rgba(0, 0, 0, 0.25);
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+.content-container p{
+    font-size: 25px;
+    font-style:normal;
+    max-width: 76%; /* Limita el ancho máximo del párrafo */
+    margin-bottom: 50px; /* Añade espacio entre párrafos */
+    line-height: 1.5; /* Mejora la legibilidad */
+    color: #ffffff; /* Color del texto */
+    text-align: justify;
+}
+
+.text-container {
+    width: 100%;
+    max-width: 100%; /* Limita el ancho máximo del texto */
+    overflow: hidden; /* Previene el desbordamiento */
+    white-space: pre-wrap; /* Preserva espacios y saltos de línea */
+    margin-bottom: 20px;
+}
+
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%; /* Ocupa toda la altura del contenedor */
+}
+
+.image-margin {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.description {
+    max-width: 80%;
+    margin-bottom: 30px;
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column; /* Cambia la dirección a columna */
+    gap: 20px; /* Espacio entre los botones */
+    justify-content: center;
+    align-items: center; /* Centra los botones horizontalmente */
+    width: 100%;
+}
+
+.buttons button {
+    padding: 30px; /* Ajusta el padding uniformemente */
+    font-size: 25px; /* Aumenta el tamaño de la fuente */
+    cursor: pointer;
+    border: none;
+    width: 100%; /* Asegura que el ancho ocupe el contenedor */
+    max-width: 300px; /* Ancho máximo de los botones */
+    border-radius: 100px; /* Ajusta el radio para suavizar las esquinas */
+    background-color: #3c3c3c; /* Color de fondo */
+    color: #fff; /* Color del texto */
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25); /* Efecto de sombra */
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    text-align: center; /* Asegura que el texto esté centrado */
+}
+
+.buttons button:hover {
+    background-color: #505050; /* Color de fondo al pasar el cursor */
+}
+
+.buttons button:active {
+    transform: scale(0.95); /* Pequeño efecto de escala al hacer clic */
 }
