--- a/web/css/postlog.css
+++ b/web/css/postlog.css
@@ -8,6 +8,7 @@ body {
     background-position: center;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden; /* Evita el desplazamiento de la página */
 }
 
 .window {
@@ -24,11 +25,47 @@ body {
     box-shadow: 0px 4px 83px rgba(0, 0, 0, 0.25);
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    transform: translateX(0);
+    transition: transform 1s ease-in-out; /* La transición en el 'transform' */
 }
 
-.content-container p{
+.current-window {
+    width: 100%; /* Añade esta propiedad para que ocupe todo el contenedor */
+}
+
+.windows-container {
+    display: flex;
+    width: 100%; /* Doble del ancho de una ventana */
+    transition: transform 1s ease-in-out; /* Transición suave */
+}
+
+.next-window {
+    position: absolute;
+    top: 0;
+    right: -100%; /* Comienza fuera de la pantalla a la derecha */
+    width: 80%;
+    max-width: 625px;
+    height: 80vh;
+    background: rgb(60, 60, 60);
+    box-shadow: 0px 4px 83px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0; /* Inicialmente invisible */
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+/* Estado visible */
+.next-window.visible {
+    opacity: 1; /* Totalmente visible */
+    transform: translateX(0); /* Desplaza a la vista desde la derecha */
+    right: 0; /* Mueve la ventana a la posición correcta */
+}
+
+
+.content-container p {
     font-size: 25px;
-    font-style:normal;
+    font-style: normal;
     max-width: 76%; /* Limita el ancho máximo del párrafo */
     margin-bottom: 50px; /* Añade espacio entre párrafos */
     line-height: 1.5; /* Mejora la legibilidad */
@@ -43,7 +80,6 @@ body {
     white-space: pre-wrap; /* Preserva espacios y saltos de línea */
     margin-bottom: 20px;
 }
-
 
 .content-container {
     display: flex;
@@ -97,5 +133,5 @@ body {
 }
 
 .buttons button:active {
-    transform: scale(0.95); /* Pequeño efecto de escala al hacer clic */
+    transform: scale(0.65); /* Pequeño efecto de escala al hacer clic */
 }
