--- a/web/css/postlog.css
+++ b/web/css/postlog.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: rgb(60, 60, 60);
+    background: rgba(60, 60, 60, 1);
     background-size: cover;
     background-position: center;
     margin: 0;
@@ -108,6 +108,14 @@ body {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
+    transform: rotate(0deg);
+    transition: transform 0.5s;
+}
+
+.image-margin:hover{
+
+    transform: rotate(360deg);
+
 }
 
 .description {
