--- a/web/src/styles/sign-in.css
+++ b/web/src/styles/sign-in.css
@@ -1,81 +1,119 @@
 body {
   display: flex;
+  flex-direction: column; /* Organiza los elementos en columnas */ 
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: rgb(60, 60, 60);
-  background-size: cover;
-  background-position: center;
-  margin: auto;
-  font-family: "Roboto", sans-serif;
+  background: rgb(1, 4, 9);
+  font-family: Montserrat;
+  
 }
 
-.login-container {
-  background-color: #44444496;
+.loginContainer {
+
+  background-color: #ff000000;
   padding: 40px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
+  border-radius: 16px ;
+  border: 1px solid rgb(240, 246, 252);
+  max-width: 495px;
   width: 100%;
   text-align: center;
-  box-shadow: -30px 30px 10px rgba(0, 0, 0, 0.2);
+  color: #ffffff; 
+  height: 387px;
 }
 
-h2 {
-  font-family: Montserrat;
-  font-weight: 900;
-  margin-bottom: 30px;
-  color: #ffffff;
+
+.inputsContainer{
 }
 
-.input-group {
-  margin-bottom: 20px;
-  text-align: center;
+.TopContainer{
+  display: flex;
+  flex-direction: column; /* Organiza los elementos en columnas */ 
+  justify-content: center; /* Alinea verticalmente */ 
+  align-items: center; /* Alinea horizontalmente */ 
+  max-width: 600px; 
+  width: 100%; 
+  height: auto; /* Ajusta la altura automáticamente */ 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  color: #ffffff
+  
+}
+
+a{
+
+font-family: Montserrat;
+margin-left: 10px;
+font-size: 25px;
+color: rgb(104, 53, 255);
+
+}
+
+.BotContainer{
+  border: 1px solid  #fff;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row; /* Organiza los elementos en columnas */ 
+  justify-content: center; /* Alinea verticalmente */ 
+  align-items: center; /* Alinea horizontalmente */ 
+  padding: 20px; 
+  border-radius: 6px; 
+  max-width: 530px; 
+  width: 100%; 
+  height: auto; /* Ajusta la altura automáticamente */ 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  color: #ffffff
 }
 
 label {
+  padding-left: 35px;
   font-weight: 500;
   font-family: Montserrat;
   display: block;
   text-align: left;
-  margin-bottom: -0.5px;
-  margin-left: 30px;
+  margin-bottom:20px;
   color: #ffffff;
-}
-
-#username {
-  color: #fff;
-}
-
-#password {
-  color: #fff;
+  border: 0px solid #ffffff;
 }
 
 .inputs {
-  background-color: #ffffff00;
+  background-color: #f3f3f300;
   font-family: sans-serif;
-  width: 80%;
-  padding: 10px;
-  border: 2px solid #ffffff;
-  border-radius: 50px;
+  width: 420px;
+  height: 41px;
+  border: 1px solid #ffffff;
   box-sizing: content-box;
   text-align: center;
-  margin: 2%;
   text-decoration: none;
+  margin-bottom:50px;
+  color: #fff;
+
+
+}
+
+.DataWeb{
+  font-family: Montserrat;
+  font-weight: 400;
+  font-size: 16px;
+  gap: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 50px;
+  color: rgb(240, 246, 252);
+
 }
 
 button {
+  font-family: Montserrat;
   font-weight: 900;
   width: 85%;
-  padding: 10px;
-  background-color: #045750;
+  background-color: rgb(104, 53, 255);
   color: #fff;
   border: none;
-  border-radius: 100px;
   cursor: pointer;
-  font-size: 16px;
-  margin: 5%;
+  font-size: 20px;
   transition: transform 0.2s ease;
+  height: 71px;
 }
 
 button:active {
@@ -83,29 +121,11 @@ button:active {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color:rgb(38, 13, 114);
 }
 
-/* .background-container {
-  background: linear-gradient(
-      45deg,
-      rgba(255, 255, 255, 0.8) 0%,
-      rgba(60, 60, 60, 0.8) 100%
-    ),
-    url("../assets/images/enfermera/1.png");
-  filter: grayscale(100%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  transition: opacity 1s ease-in-out;
-  opacity: 1;
-  z-index: -1;
-}
+.Logo{
+  padding-bottom: 30px;
+  color: rgb(240, 246, 252);
 
-.background-fade-out {
-  opacity: 0;
-} */
+}
