--- a/web/src/styles/test-details.scss
+++ b/web/src/styles/test-details.scss
@@ -84,3 +84,26 @@ comments-container {
     margin-top: 10px;
   }
 }
+
+.chart-wrapper {
+  max-height: 80vh; /* Limita la altura máxima al 80% de la ventana */
+  overflow-y: auto; /* Activa el desplazamiento vertical */
+  padding: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  width: 100%;
+  height: 400px; // Ajusta según el diseño
+  margin-bottom: 20px; /* Espaciado entre las gráficas */
+}
+
+canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
